# blog-tech-kit

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  spec-driven.md
.blogkit/memory/: constitution.md
.blogkit/templates/: plan-template.md  spec-template.md  tasks-template.md
.blogkit/templates/commands/: blogkit.analyze.md  blogkit.clarify.md  blogkit.constitution.md  blogkit.implement.md  blogkit.specify.md  blogkit.tasks.md
.github/workflows/: release.yml
.github/workflows/scripts/: create-release-packages.sh  generate-release-notes.sh  get-next-version.sh
.specify/templates/commands/: blogkit.checklist.md  blogkit.constitution.md  (+2 more)
docs/: installation.md  local-development.md  maintainer-guide.md  quickstart.md  templates.md  upgrade.md
examples/: eval_constitution.md  eval_plan.md  eval_spec.md  eval_tasks.md
refs/: 0_overview.md  1_principles_for_constitution.md  2_ define_for_specify.md  3_project_mangement_for_plan.md  4_pm_tasking_for_tasks.md  6_claude_code.md  7_claude_code.md
refs/5_more/: blog_operations_guide.md  blog_principles.md  blog_strategy_analysis.md  overview.md  pmfkit_optimize_code_examples.md  pmfkit_optimize_guide.md  pmfkit_optimize_quick_ref.md  tasking_methodology.md
scripts/: build-templates.sh  test-auto-release.sh  validate-templates.sh
specs/000-blog-tech-kit-foundation/: plan.md  tasks.md
specs/001-pmf-kit-variant/: IMPLEMENTATION-STATUS.md  spec.md  tasks.md
specs/002-automated-template-releases/: data-model.md  research.md  spec.md  tasks.md
src/blog_cli/: __init__.py
(+21 files in other folders)
