[project]
name = "blog-cli"
version = "0.0.22"
description = "Blog CLI, part of Blog-Tech-Kit. A spec-driven development tool for Twitter marketing and technical blog growth for AI SaaS products."
requires-python = ">=3.11"
dependencies = [
    "typer",
    "rich",
    "httpx[socks]",
    "platformdirs",
    "readchar",
    "truststore>=0.10.4",
]

[project.scripts]
blog = "blog_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/blog_cli"]

